@@ -87,6 +87,7 @@ extern int is_fundamental(UV n, int neg);
 extern int is_totient(UV n);
 extern int is_semiprime(UV n);
 extern int is_almost_prime(UV k, UV n);
+extern int is_omega_prime(UV k, UV n);
 extern int is_carmichael(UV n);
 extern UV  is_quasi_carmichael(UV n);  /* Returns number of bases */
 extern UV  pillai_v(UV n);             /* v: v! % n == n-1 && n % v != 1 */
