@@ -34,6 +34,7 @@ Revision history for Perl module Math::Prime::Util
     - is_rough(n,k)                   is n a k-rough number
     - is_practical(n)                 is n a practical number
     - is_delicate_prime(n)            is n a digitally delicate prime
+    - is_omega_prime(k,n)             is n divisible by exactly k primes
     - is_almost_prime(k,n)            does n have exactly k prime factors
     - almost_primes(k,[start,]end)    array ref of k-almost-primes
     - almost_prime_count(k,n)         count of integers with exactly k factors
